feature: new flow of migration`